Fix checkbox alignment

--- a/client/src/scss/styles/_forms.scss
+++ b/client/src/scss/styles/_forms.scss
@@ -71,7 +71,7 @@
   label,
   input,
   textarea {
-    display: block;
+    display: inline-block;
   }
 
   .checkbox_label,
